objects/User.object
<CustomObject>
    <fields>
        <fullName>Edit_Booked_Loans_Permission__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box should be checked if the user has permissions to edit booked loans</description>
        <inlineHelpText>This box should be checked if the user has permissions to edit booked loans</inlineHelpText>
        <label>Edit Booked Loans Permission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_nCino_User__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is nCino User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Mortgage_License_State__c</fullName>
        <description>Users select a state from this picklist to identify the issuing state that issued the Mortgage License. By default, it is blank.</description>
        <inlineHelpText>Select the state that issued the Mortgage License.</inlineHelpText>
        <label>Mortgage License State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LLC_BI__US_States_Abbreviated</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Mortgage_License__c</fullName>
        <description>Administrators populate this mandatory field to capture a user&apos;s unique Mortgage License number. By default, it is blank.</description>
        <inlineHelpText>Enter the user&apos;s unique Mortgage License number.</inlineHelpText>
        <label>Mortgage License</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__NMLS__c</fullName>
        <description>Administrators populate this mandatory field to capture a user&apos;s unique National Mortgage Licensing System (NMLS) number. By default, it is blank.</description>
        <inlineHelpText>Enter the user&apos;s unique National Mortgage Licensing System (NMLS) number.</inlineHelpText>
        <label>NMLS</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Officer_Number__c</fullName>
        <description>This field is manually populated. It is optional. This field is used to specify a unique number assigned to the user (officer).</description>
        <label>Officer Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Secured_Individual_Lending_Authority__c</fullName>
        <description>This field is manually populated. It is optional. This field is used to specify the amount (currency) of the user&apos;s secured lending authority.</description>
        <label>Secured Individual Lending Authority</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Unsecured_Individual_Lending_Authority__c</fullName>
        <description>This field is manually populated. It is optional. This field is used to specify the amount (currency) of the user&apos;s unsecured lending authority.</description>
        <label>Unsecured Individual Lending Authority</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__nCino_User__c</fullName>
        <description>This field is automatically populated as enabled. This field indicates whether the user has a license for the nCino Platform or not.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>nCino User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Triggers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field should be checked when choosing to turn off ALL Triggers for an individual user. This will typically apply to nCino &amp; Salesforce Administrators.</description>
        <inlineHelpText>This field should be checked when choosing to turn off ALL Triggers for an individual user. This will typically apply to nCino &amp; Salesforce Administrators.</inlineHelpText>
        <label>No Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field should be checked when choosing to turn off ALL validation rules for an individual user.  This will typically apply to nCino &amp; Salesforce Administrators.</description>
        <inlineHelpText>This field should be checked when choosing to turn off ALL validation rules for an individual user.  This will typically apply to nCino &amp; Salesforce Administrators.</inlineHelpText>
        <label>No Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field should be checked when choosing to turn off ALL workflow rules for an individual user.  This will typically apply to nCino &amp; Salesforce Administrators.</description>
        <inlineHelpText>This field should be checked when choosing to turn off ALL workflow rules for an individual user.  This will typically apply to nCino &amp; Salesforce Administrators.</inlineHelpText>
        <label>No Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Officer_Codes__c</fullName>
        <label>Officer Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UBLOS_Branch__c</fullName>
        <label>Branch</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UBLOS_Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Arlington - Alexandria VA</fullName>
                </value>
                <value>
                    <fullName>Brunswick NC</fullName>
                </value>
                <value>
                    <fullName>Cabell - Wayne WV</fullName>
                </value>
                <value>
                    <fullName>Capital WV</fullName>
                </value>
                <value>
                    <fullName>Charleston SC</fullName>
                </value>
                <value>
                    <fullName>Charlotte NC</fullName>
                </value>
                <value>
                    <fullName>Charlottesville VA</fullName>
                </value>
                <value>
                    <fullName>Coastal East NC</fullName>
                </value>
                <value>
                    <fullName>Columbia SC</fullName>
                </value>
                <value>
                    <fullName>Eastern Panhandle WV</fullName>
                </value>
                <value>
                    <fullName>Fairfax East VA</fullName>
                </value>
                <value>
                    <fullName>Fairfax West VA</fullName>
                </value>
                <value>
                    <fullName>Fayetteville - Lumberton NC</fullName>
                </value>
                <value>
                    <fullName>Gastonia NC</fullName>
                </value>
                <value>
                    <fullName>Greenville North NC</fullName>
                </value>
                <value>
                    <fullName>Greenville South SC</fullName>
                </value>
                <value>
                    <fullName>Hagerstown MD</fullName>
                </value>
                <value>
                    <fullName>Harrisonburg VA</fullName>
                </value>
                <value>
                    <fullName>Hickory NC</fullName>
                </value>
                <value>
                    <fullName>Jackson WV</fullName>
                </value>
                <value>
                    <fullName>Lake Wylie SC</fullName>
                </value>
                <value>
                    <fullName>Lincolnton NC</fullName>
                </value>
                <value>
                    <fullName>Mooresville NC</fullName>
                </value>
                <value>
                    <fullName>Morgantown WV</fullName>
                </value>
                <value>
                    <fullName>Myrtle Beach SC</fullName>
                </value>
                <value>
                    <fullName>Northern Panhandle WV</fullName>
                </value>
                <value>
                    <fullName>Pennsylvania</fullName>
                </value>
                <value>
                    <fullName>PWC - Stafford - Fredericksburg VA</fullName>
                </value>
                <value>
                    <fullName>Raleigh - Durham NC</fullName>
                </value>
                <value>
                    <fullName>Satellite Georgia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UBLOS_Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nBIDCA__nCino_Data_User2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>nCino Analytics Reporting Field referenced in Created in nCino formula field</description>
        <inlineHelpText>Check box to indicate this user account is used for importing records via Informatica or API.</inlineHelpText>
        <label>nCino Data User2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nCino_University_Completion__c</fullName>
        <label>nCino University Completion %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__ActiveUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__AdminUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__AllUsers</fullName>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>